--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,6 +6,8 @@
   = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
   = javascript_include_tag 'application', 'data-turbolinks-track' => true
   = csrf_meta_tags
-%body{ @body_attrs }
-  %div{ @view_container_attrs }
-    = yield
+%body{ style: 'padding-top:70px;' }
+  %div{ @body_attrs }
+    %div{ @view_container_attrs }
+      = render 'layouts/header'
+      = yield
