--- a/app/views/boards/show.html.haml
+++ b/app/views/boards/show.html.haml
@@ -3,12 +3,15 @@
     .col-lg-12
       %h4 {{ board.name }}
   .row
-    .col-lg-1
+    .col-lg-3{ ng: { repeat: 'list in board.lists' } }
+      .card
+        .card-header {{ list.name }}
+    .col-lg-3
       .card
         .card-header
-          %form{ ng: { submit: "create(name)" } }
+          %form{ ng: { submit: "createList(listName)" } }
             .input-group
-              %input.form-control.form-control-sm{ type: 'text', placeholder: 'new list name', name: 'name', ng: { model: 'name' } }
+              %input.form-control.form-control-sm{ type: 'text', placeholder: 'new list name', name: 'name', ng: { model: 'listName' } }
               %span.input-group-btn
-                %button.btn.btn-primary.btn-sm{ type: 'submit', ng: { disabled: '!(name.length > 0)' } } Create
+                %button.btn.btn-primary.btn-sm{ type: 'submit', ng: { disabled: '!(listName.length > 0)' } } Create
 
